fdo#40067: FileSave: Calc does not preserve whitespace in strings

When saving in .xlsx format, LibreOffice removes leading and trailing whitespace from the strings. This is required in some business scenarios. mbEnableTrimSpace is set to false by default to enable LibreOffice to save leading and trailing whitespaces.

Change-Id: I2590bd8b0d0c1d853caead60cf3af1b865d7fed7