sc/source/filter/inc/richstringcontext.hxx
@@ -48,6 +48,7 @@ RichStringContext::RichStringContext( ParentType& rParent, RichStringRef xString
     WorkbookContextBase( rParent ),
     mxString( xString )
 {
+    mbEnableTrimSpace = false;
     OSL_ENSURE( mxString.get(), "RichStringContext::RichStringContext - missing string object" );
 }
 
